# optimal-psychophysics

./: Cargo.toml  demo.py  pyproject.toml  readme.md  rust-toolchain.toml  rustc-ice-2024-08-02T09_46_02-79367.txt  rustc-ice-2024-08-02T09_46_02-79368.txt  rustc-ice-2024-08-02T09_46_05-79470.txt
.cargo/: config.toml
.github/workflows/: CI.yml
src/: dists.rs  eig.rs  lib.rs  model.rs  posterior.rs  storage.rs  two_param_psychometric.rs  utils.rs
src/dists/: bernoulli_logit.rs  mod.rs
