[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "optimal-psychophysics"
authors = [{ name = "Marc Pabst", email = "mail@marcpabst.com" }]
description = "Python library for optimal psychophysics design and adaptive testing"
license = "MPL-2.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
